<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aaron.concerttickets.MainActivity">

    <EditText
        android:id="@+id/txtTickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/txtTickets"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="0dp" />

    <Spinner
        android:id="@+id/txtGroup"
        android:layout_width="395dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:entries="@array/txtGroup"
        android:prompt="@string/prompt"
        app:layout_constraintTop_toBottomOf="@+id/txtTickets"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnCost"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGroup" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="393dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/imgConcert"
        android:layout_width="wrap_content"
        android:layout_height="216dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/description"
        app:layout_constraintTop_toBottomOf="@+id/txtResult"
        app:srcCompat="@drawable/concert"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="396dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtTitle"
        android:textAlignment="center"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
